--- a/html/Student/Courses/lessons.html
+++ b/html/Student/Courses/lessons.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Уроки</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../src/css/lessons/main.css">
-    <link rel="stylesheet" href="../src/css/buttons.css">
-    <link rel="stylesheet" href="../src/css/footer.css">
+    <link rel="stylesheet" href="../../../src/css/Student/Courses/Lessons/main.css">
+    <link rel="stylesheet" href="../../../src/css/buttons.css">
+    <link rel="stylesheet" href="../../../src/css/footer.css">
 </head>
 
 <body>
@@ -15,17 +15,14 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="../images/logo.svg" alt="logo">
+                    <img src="../../../images/logo.svg" alt="logo">
                     EDUSTURM
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="nav" id="navbarNav">
                     <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
                     <ul class="navbar-nav">
                         <button type="button" name="button" class="profile-button">
-                            <img src="../images/profile.svg" alt="Profile">
+                            <img src="../../../images/profile.svg" alt="Profile">
                         </button>
                     </ul>
                 </div>
@@ -41,7 +38,7 @@
                     <h2>Вступление</h2>
                 </div>
                 <div class="text-lesson">
-                    <img src="../images/Play.svg" alt="Play">
+                    <img src="../../../images/Play.svg" alt="Play">
                     00:06:39
                 </div>
             </div>
@@ -53,7 +50,7 @@
                     <h2>Сторителлинг. Интро недели</h2>
                 </div>
                 <div class="text-lesson">
-                    <img src="../images/Play.svg" alt="Play">
+                    <img src="../../../images/Play.svg" alt="Play">
                     00:06:39
                 </div>
             </div>
@@ -65,7 +62,7 @@
                     <h2>Как создавать логотипы</h2>
                 </div>
                 <div class="text-lesson">
-                    <img src="../images/Play.svg" alt="Play">
+                    <img src="../../../images/Play.svg" alt="Play">
                     00:06:39
                 </div>
             </div>
@@ -77,7 +74,7 @@
                     <h2>Как создавать логотипы</h2>
                 </div>
                 <div class="text-lesson">
-                    <img src="../images/Play.svg" alt="Play">
+                    <img src="../../../images/Play.svg" alt="Play">
                     00:06:39
                 </div>
             </div>
@@ -89,7 +86,7 @@
                     <h2>Как создавать логотипы</h2>
                 </div>
                 <div class="text-lesson">
-                    <img src="../images/Play.svg" alt="Play">
+                    <img src="../../../images/Play.svg" alt="Play">
                     00:06:39
                 </div>
             </div>
@@ -101,7 +98,7 @@
                     <h2>Как создавать логотипы</h2>
                 </div>
                 <div class="text-lesson">
-                    <img src="../images/Play.svg" alt="Play">
+                    <img src="../../../images/Play.svg" alt="Play">
                     00:06:39
                 </div>
             </div>
