--- a/html/Student/Courses/pageCourse.html
+++ b/html/Student/Courses/pageCourse.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Страница курса</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../src/css/buttons.css">
-    <link rel="stylesheet" href="../src/css/userCoursePage/main.css">
-    <link rel="stylesheet" href="../src/css/userCoursePage/teachers.css">
-    <link rel="stylesheet" href="../src/css/userCoursePage/modules.css">
-    <link rel="stylesheet" href="../src/css/footer.css">
+    <link rel="stylesheet" href="../../../src/css/buttons.css">
+    <link rel="stylesheet" href="../../../src/css/Student/Courses/UserCoursePage/main.css">
+    <link rel="stylesheet" href="../../../src/css/Student/Courses/UserCoursePage/teachers.css">
+    <link rel="stylesheet" href="../../../src/css/Student/Courses/UserCoursePage/modules.css">
+    <link rel="stylesheet" href="../../../src/css/footer.css">
 </head>
 
 <body>
@@ -18,17 +18,14 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="../images/logo.svg" alt="logo">
+                    <img src="../../../images/logo.svg" alt="logo">
                     EDUSTURM
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="nav" id="navbarNav">
                     <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
                     <ul class="navbar-nav">
                         <button type="button" name="button" class="profile-button">
-                            <img src="../images/profile.svg" alt="Profile">
+                            <img src="../../../images/profile.svg" alt="Profile">
                         </button>
                     </ul>
                 </div>
@@ -41,7 +38,7 @@
                     Курс
                     <h1>Графический дизайнер с нуля до PRO</h1>
                 </div>
-                <img src="../images/iconCourses.png" class="img-mobile img-fluid" alt="Designer">
+                <img src="../../../images/iconCourses.png" class="img-mobile img-fluid" alt="Designer">
                 <div class="text-course">
                     Вы изучите основные инструменты графического дизайнера, чтобы создавать элементы фирменного стиля и другую графику для бизнеса. Сможете начать карьеру в студии или на фрилансе.
                 </div>
@@ -50,7 +47,7 @@
                 </div>
 
             </div>
-            <img src="../images/iconCourses.png" class="img-computer" alt="Designer">
+            <img src="../../../images/iconCourses.png" class="img-computer" alt="Designer">
         </div>
         <div class="info">
             <ul>
@@ -74,7 +71,7 @@
         <div class="teachers">
             <div class="teacher">
                 <div>
-                    <img src="../images/avatar.png" class="img-fluid" alt="avatar">
+                    <img src="../../../images/avatar.png" class="img-fluid" alt="avatar">
                 </div>
                 <div class="text-teacher">
                     <h2>Иван Иванов</h2>
@@ -83,7 +80,7 @@
             </div>
             <div class="teacher">
                 <div class="logo-teacher">
-                    <img src="../images/avatar.png" class="img-fluid" alt="avatar">
+                    <img src="../../../images/avatar.png" class="img-fluid" alt="avatar">
                 </div>
                 <div class="text-teacher ">
                     <h2>Иван Иванов</h2>
@@ -92,7 +89,7 @@
             </div>
             <div class="teacher">
                 <div class="logo-teacher">
-                    <img src="../images/avatar.png" class="img-fluid" alt="avatar">
+                    <img src="../../../images/avatar.png" class="img-fluid" alt="avatar">
                 </div>
                 <div class="text-teacher">
                     <h2>Иван Иванов</h2>
@@ -101,7 +98,7 @@
             </div>
             <div class="teacher">
                 <div class="logo-teacher">
-                    <img src="../images/avatar.png" class="img-fluid" alt="avatar">
+                    <img src="../../../images/avatar.png" class="img-fluid" alt="avatar">
                 </div>
                 <div class="text-teacher">
                     <h2>Иван Иванов</h2>
@@ -118,7 +115,7 @@
                     </div>
                     <h1>Вступление. Разбор профессии дизайнера</h1>
 
-                    <img src="../images/modulePicture.png" class="module-img-mobile img-fluid" alt="Face">
+                    <img src="../../../images/modulePicture.png" class="module-img-mobile img-fluid" alt="Face">
 
                     <div class="text-module">
                         Вы изучите основные инструменты графического дизайнера, чтобы создавать элементы фирменного стиля и другую графику для бизнеса. Сможете начать карьеру в студии или на фрилансе.
@@ -128,7 +125,7 @@
                     </div>
                 </div>
 
-                <img src="../images/modulePicture.png" class="module-img-computer" alt="Face">
+                <img src="../../../images/modulePicture.png" class="module-img-computer" alt="Face">
 
             </div>
             <div class="module">
@@ -138,7 +135,7 @@
                     </div>
                     <h1>Основы Illustrator и Photoshop</h1>
 
-                    <img src="../images/modulePicture.png" class="module-img-mobile img-fluid" alt="Face">
+                    <img src="../../../images/modulePicture.png" class="module-img-mobile img-fluid" alt="Face">
 
                     <div class="text-module">
                         Вы изучите основные инструменты графического дизайнера, чтобы создавать элементы фирменного стиля и другую графику для бизнеса. Сможете начать карьеру в студии или на фрилансе.
@@ -148,7 +145,7 @@
                     </div>
                 </div>
 
-                <img src="../images/modulePicture.png" class="module-img-computer" alt="Face">
+                <img src="../../../images/modulePicture.png" class="module-img-computer" alt="Face">
 
             </div>
         </div>
