--- a/html/Student/Courses/reccomendCourses.html
+++ b/html/Student/Courses/reccomendCourses.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Рекомендованные курсы</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../src/css/buttons.css">
-    <link rel="stylesheet" href="../src/css/userCourse/main.css">
-    <link rel="stylesheet" href="../src/css/footer.css">
+    <link rel="stylesheet" href="../../../src/css/buttons.css">
+    <link rel="stylesheet" href="../../../src/css/Student/Courses/UserCourse/main.css">
+    <link rel="stylesheet" href="../../../src/css/footer.css">
 </head>
 
 <body>
@@ -16,17 +16,14 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="../images/logo.svg" alt="logo">
+                    <img src="../../../images/logo.svg" alt="logo">
                     EDUSTURM
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="nav" id="navbarNav">
                     <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
                     <ul class="navbar-nav">
                         <button type="button" name="button" class="profile-button">
-                            <img src="../images/profile.svg" alt="Profile">
+                            <img src="../../../images/profile.svg" alt="Profile">
                         </button>
                     </ul>
                 </div>
@@ -41,7 +38,7 @@
                         Курс
                         <h1>Графический дизайнер с нуля до PRO</h1>
                     </div>
-                    <img src="../images/iconCourses.png" class="img-mobile img-fluid" alt="Designer">
+                    <img src="../../../images/iconCourses.png" class="img-mobile img-fluid" alt="Designer">
                     <div class="text-course">
                         Вы изучите основные инструменты графического дизайнера, чтобы создавать элементы фирменного стиля и другую графику для бизнеса. Сможете начать карьеру в студии или на фрилансе.
                     </div>
@@ -50,7 +47,7 @@
                     </div>
 
                 </div>
-                <img src="../images/iconCourses.png" class="img-computer" alt="Designer">
+                <img src="../../../images/iconCourses.png" class="img-computer" alt="Designer">
             </div>
             <div class="course-face">
                 <div class="description-course">
@@ -58,7 +55,7 @@
                         Курс
                         <h1>Дизайнер интерьеров с нуля до PRO</h1>
                     </div>
-                    <img src="../images/iconCourses.png" class="img-mobile img-fluid" alt="Designer">
+                    <img src="../../../images/iconCourses.png" class="img-mobile img-fluid" alt="Designer">
                     <div class="text-course">
                         Всего за несколько месяцев вы освоите перспективную и творческую профессию. Сможете устроиться в студию или брать заказы на фрилансе, даже если вы только начинаете свой путь в дизайне.
                     </div>
@@ -66,7 +63,7 @@
                         <button type="button" name="button" class="green-button">Начать обучение</button>
                     </div>
                 </div>
-                <img src="../images/iconCourses.png" class="img-computer" alt="Designer">
+                <img src="../../../images/iconCourses.png" class="img-computer" alt="Designer">
             </div>
             <div class="course-face">
                 <div class="description-course">
@@ -74,7 +71,7 @@
                         Курс
                         <h1>Excel + Google Таблицы с нуля до PRO</h1>
                     </div>
-                    <img src="../images/iconCourses.png" class="img-mobile img-fluid" alt="Designer">
+                    <img src="../../../images/iconCourses.png" class="img-mobile img-fluid" alt="Designer">
                     <div class="text-course">
                         Курс для тех, кто не любит рутину и хочет автоматизировать работу. Научитесь оперативно составлять сложные отчёты и строить прогнозы. Сможете работать в таблицах быстрее с помощью скриптов и макросов. Освободите время для других задач.
                     </div>
@@ -82,7 +79,7 @@
                         <button type="button" name="button" class="green-button">Начать обучение</button>
                     </div>
                 </div>
-                <img src="../images/iconCourses.png" class="img-computer" alt="Designer">
+                <img src="../../../images/iconCourses.png" class="img-computer" alt="Designer">
             </div>
             <button type="button" class="button-rate" name="button">Показать еще</button>
         </div>
