--- a/html/Student/Courses/userLesson.html
+++ b/html/Student/Courses/userLesson.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Урок</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../src/css/buttons.css">
-    <link rel="stylesheet" href="../src/css/userLesson/main.css">
-    <link rel="stylesheet" href="../src/css/userLesson/homework.css">
+    <link rel="stylesheet" href="../../../src/css/buttons.css">
+    <link rel="stylesheet" href="../../../src/css/Student/Courses/UserLesson/main.css">
+    <link rel="stylesheet" href="../../../src/css/Student/Courses/UserLesson/homework.css">
+    <link rel="stylesheet" href="../../../src/css/footer.css">
 </head>
 
 <body>
@@ -16,17 +17,14 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="../images/logo.svg" alt="logo">
+                    <img src="../../../images/logo.svg" alt="logo">
                     EDUSTURM
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="nav">
                     <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
                     <ul class="navbar-nav">
                         <button type="button" name="button" class="profile-button">
-                            <img src="../images/profile.svg" alt="Profile">
+                            <img src="../../../images/profile.svg" alt="Profile">
                         </button>
                     </ul>
                 </div>
@@ -38,9 +36,10 @@
             <div class="head-lesson">
                 <p>Урок 2</p>
                 <h1>Сторителлинг. Интро недели</h1>
-                <p>00:06:39</p>
+                <img src="../../../images/Play.svg" alt="Play">
+                00:06:39
             </div>
-            <img src="../images/video.png" class="img-fluid w-100" alt="video">
+            <img src="../../../images/video.png" class="img-fluid w-100" alt="video">
             <div class="description-lesson">
                 <div class="description">
                     <div class="description-title">
@@ -79,7 +78,7 @@
 
         </div>
     </div>
-    <div class="homework-description">
+    <div class="homework-description pt-1 pb-5">
         <div class="container">
             <div class="description-lesson">
                 <div class="description">
@@ -122,6 +121,7 @@
                     <div class="text-files">
                         После отправки работа появится здесь
                     </div>
+                    <button type="button" class="button-signin" name="button">Отправить на проверку</button>
                 </div>
             </div>
         </div>
