--- a/html/Student/PersonalAccount/personalAccountSettingsStudent.html
+++ b/html/Student/PersonalAccount/personalAccountSettingsStudent.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Подписки</title>
+    <title>Настройки профиля</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../src/css/buttons.css">
-    <link rel="stylesheet" href="../../src/css/personalAccount/main.css">
-    <link rel="stylesheet" href="../../src/css/personalAccount/Payment/content.css">
+    <link rel="stylesheet" href="../../../src/css/buttons.css">
+    <link rel="stylesheet" href="../../../src/css/Student/PersonalAccount/main.css">
+    <link rel="stylesheet" href="../../../src/css/Student/PersonalAccount/Settings/content.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="../../images/logo.svg" alt="logo">
+                    <img src="../../../images/logo.svg" alt="logo">
                     EDUSTURM
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +26,7 @@
                     <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
                     <ul class="navbar-nav">
                         <button type="button" name="button" class="profile-button">
-                            <img src="../../images/profile.svg" alt="Profile">
+                            <img src="../../../images/profile.svg" alt="Profile">
                         </button>
                     </ul>
                 </div>
@@ -41,34 +41,24 @@
                 <li class="list-group-item mt-5"><a href="#">Выход из аккаунта</a></li>
             </ul>
             <div class="content-personal-account">
-                <h2 class="mb-4">История оплат</h2>
-                <div class="payments">
-                    <div class="payment">
-                        <div class="date-subscription">
-                            <h2>Подписка БРО</h2>
-                            01.12 - 31.12
+                <h2 class="mb-4">Личные данные</h2>
+                <div class="formSettings">
+                    <form>
+                        <div class="mb-3">
+                            <label for="exampleFormControlInput1" class="form-label">E-mail*</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                         </div>
-                        <div class="price">
-                            5 999 руб.
+                        <div class="mb-5">
+                            <label for="exampleFormControlTextarea1" class="form-label">Имя и фамилия*</label>
+                            <input class="form-control" id="exampleFormControlTextarea1">
                         </div>
-                    </div>
-                    <div class="payment">
-                        <div class="date-subscription">
-                            <h2>Подписка БРО</h2>
-                            01.12 - 31.12
+                        <h2 class="mb-3">Оповещения</h2>
+                        <div class="email-warning-text">
+                            <p>E-mail оповещение о новом посте</p>
                         </div>
-                        <div class="price">
-                            5 999 руб.
-                        </div>
-                    </div>
-                    <div class="payment">
-                        <div class="date-subscription">
-                            <h2>Подписка БРО</h2>
-                            01.12 - 31.12
-                        </div>
-                        <div class="price">
-                            5 999 руб.
-                        </div>
+                    </form>
+                    <div class="settings-text">
+                        Все изменения в настройках сохраняются автоматически
                     </div>
                 </div>
 
