--- a/html/Student/PersonalAccount/techServiceStudent.html
+++ b/html/Student/PersonalAccount/techServiceStudent.html
@@ -5,16 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Техподдержка</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <link rel="stylesheet" href="../../src/css/buttons.css">
-        <link rel="stylesheet" href="../../src/css/personalAccount/main.css">
-        <link rel="stylesheet" href="../../src/css/personalAccount/TechService/main.css">
+        <link rel="stylesheet" href="../../../src/css/buttons.css">
+        <link rel="stylesheet" href="../../../src/css/Student/PersonalAccount/main.css">
+        <link rel="stylesheet" href="../../../src/css/Student/PersonalAccount/TechService/main.css">
     </head>
     <body>
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-white">
                 <div class="container">
                     <a class="navbar-brand" href="#">
-                        <img src="../../images/logo.svg" alt="logo">
+                        <img src="../../../images/logo.svg" alt="logo">
                         EDUSTURM
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,7 +24,7 @@
                         <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
                         <ul class="navbar-nav">
                             <button type="button" name="button" class="profile-button">
-                                <img src="../../images/profile.svg" alt="Profile">
+                                <img src="../../../images/profile.svg" alt="Profile">
                             </button>
                         </ul>
                     </div>
@@ -42,14 +42,14 @@
                     <h2 class="w-75 mb-5">Напишите нам и мы ответим так быстро, как только сможем.</h2>
                     <div class="card">
                         <div class="card-header">
-                            <img src="../../images/avatar.png" class="img-fluid" alt="Avatar">
+                            <img src="../../../images/avatar.png" class="img-fluid" alt="Avatar">
                             <div class="chat-item-text">
                                 <h4>Менеджер Илья Савельев</h4>
                             </div>
                         </div>
                         <div class="card-body d-flex flex-column justify-content-end align-items-end">
                             <div class="sender mb-3 align-items-center w-100">
-                                <img src="../../images/avatar.png" class="img-fluid" alt="Avatar">
+                                <img src="../../../images/avatar.png" class="img-fluid" alt="Avatar">
                                 <div class="sender-message w-100">
                                     Привет! Мы всегда на связи.
                                 </div>
@@ -80,7 +80,7 @@
                 </div>
             </footer>
         </div>
-        <script type="text/javascript" src="../../src/js/chat.js"></script>
+        <script type="text/javascript" src="../../../src/js/chat.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     </body>
 </html>
