--- a/html/Teacher/privateMessagesTeacher.html
+++ b/html/Teacher/privateMessagesTeacher.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Личные сообщения</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../src/css/buttons.css">
-    <link rel="stylesheet" href="../src/css/privateMessages/main.css">
+    <link rel="stylesheet" href="../../src/css/buttons.css">
+    <link rel="stylesheet" href="../../src/css/Student/PrivateMessages/main.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="../images/logo.svg" alt="logo">
+                    <img src="../../images/logo.svg" alt="logo">
                     EDUSTURM
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,31 +25,31 @@
                     <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
                     <ul class="navbar-nav">
                         <button type="button" name="button" class="profile-button">
-                            <img src="../images/profile.svg" alt="Profile">
+                            <img src="../../images/profile.svg" alt="Profile">
                         </button>
                     </ul>
                 </div>
             </div>
         </nav>
-        <h1 class="private-messages-header mt-4">Сообщения</h1>
+        <h1 class="private-messages-header mt-4">Чаты с учениками</h1>
         <div class="private-chat-body">
             <div class="chat-list">
                 <div class="chat-item">
-                    <img src="../images/avatar.png" alt="Avatar">
+                    <img src="../../images/avatar.png" alt="Avatar">
                     <div class="chat-item-text">
                         <h4>Иван Иванов</h4>
                         <p>Сообщение отправлено</p>
                     </div>
                 </div>
                 <div class="chat-item">
-                    <img src="../images/avatar.png" alt="Avatar">
+                    <img src="../../images/avatar.png" alt="Avatar">
                     <div class="chat-item-text">
                         <h4>Иван Иванов</h4>
                         <p>Сообщение отправлено</p>
                     </div>
                 </div>
                 <div class="chat-item">
-                    <img src="../images/avatar.png" alt="Avatar">
+                    <img src="../../images/avatar.png" alt="Avatar">
                     <div class="chat-item-text">
                         <h4>Иван Иванов</h4>
                         <p>Сообщение отправлено</p>
@@ -59,12 +59,12 @@
             </div>
             <div class="card w-50">
                 <div class="card-header d-flex flex-row align-items-center gap-3">
-                    <img src="../images/avatar.png" alt="Avatar">
+                    <img src="../../images/avatar.png" alt="Avatar">
                     <h3>Иван Иванов</h3>
                 </div>
                 <div class="card-body d-flex flex-column justify-content-end align-items-end">
                     <div class="sender mb-3 align-items-center w-100">
-                        <img src="../images/avatar.png" class="img-fluid" alt="Avatar">
+                        <img src="../../images/avatar.png" class="img-fluid" alt="Avatar">
                         <div class="sender-message w-100">
                             Домашка принята, все супер!
                         </div>
@@ -73,7 +73,7 @@
                         <div class="chat-user-message">
                             Ееее, спасибо!
                         </div>
-                        <img src="../images/avatar.png" class="img-fluid" alt="Avatar">
+                        <img src="../../images/avatar.png" class="img-fluid" alt="Avatar">
                     </div>
                 </div>
                 <div class="card-footer border-0 pb-5">
